syntax = "proto3";

option csharp_namespace = "Winter";

package winterZodiacSigns;

service WinterZodiacSigns {
	rpc FindZodiacSign (WinterZodiacRequest) returns (WinterZodiacResponse);
}

message WinterZodiacRequest {
	string birthDate = 1;
}

message WinterZodiacResponse {
	ZodiacSign sign = 1;
}

message ZodiacSign {
	string name = 1;
	int32 startDay = 2;
	int32 startMonth = 3;
	int32 endDay = 4;
	int32 endMonth = 5;

}